--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -21,6 +21,7 @@
 <!ENTITY Ctr_appearance		"Appearance">
 <!ENTITY Ctr_left			"Left">
 <!ENTITY Ctr_right			"Right">
+<!ENTITY Ctr_privmode		"(private window)">
 
 <!ENTITY Ctr_cuibuttons		"Tlačítka">
 <!ENTITY Ctr_cuibutnormal	"Normální">
@@ -110,7 +111,6 @@
 <!ENTITY Ctr_appbuttonct	"Vlastní barva tlačítka a liště">
 <!ENTITY Ctr_appbuttonI1	"Doporučený restart">
 <!ENTITY Ctr_appbuttonI1e	"Není viditelné v záhlaví okna Windows OS, pouze v záhlaví okna &brandShortName;u!">
-<!ENTITY Ctr_appbuttonI2	"Barvy tlačítka jsou viditelné pouze v záhlaví okna nebo liště s panely!">
 <!ENTITY Ctr_appbutmhi		"Vyšší umístění (pokud na liště s panely)">
 <!ENTITY Ctr_appbautocol	"Nastavit výchozí barvy / Aurora / Nightly automaticky">
 <!ENTITY Ctr_appbutbdl		"Skrýt okraje a barvy pozadí">
