--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -21,6 +21,7 @@
 <!ENTITY Ctr_appearance		"Appearance">
 <!ENTITY Ctr_left			"Left">
 <!ENTITY Ctr_right			"Right">
+<!ENTITY Ctr_privmode		"(private window)">
 
 <!ENTITY Ctr_cuibuttons		"Knapper">
 <!ENTITY Ctr_cuibutnormal	"Standard">
@@ -110,7 +111,6 @@
 <!ENTITY Ctr_appbuttonct	"Brugerdefineret knapfarve for knap på værktøjslinje">
 <!ENTITY Ctr_appbuttonI1	"Genstart anbefales">
 <!ENTITY Ctr_appbuttonI1e	"Kun synlig på &brandShortName;-titellinjen, ikke Windows OS-titellinjen!">
-<!ENTITY Ctr_appbuttonI2	"Farverne på knapperne er kun synlige hvis knapperne er på titellinjen og fanebladslinjen!">
 <!ENTITY Ctr_appbutmhi		"Højere placering (hvis den er på fanebladslinje)">
 <!ENTITY Ctr_appbautocol	"Indstil automatisk browser-kanalfarve (standard/Aurora/Nightly)">
 <!ENTITY Ctr_appbutbdl		"Skjul kanter og baggrundsfarver">
