--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -21,6 +21,7 @@
 <!ENTITY Ctr_appearance		"Aussehen">
 <!ENTITY Ctr_left			"Links">
 <!ENTITY Ctr_right			"Rechts">
+<!ENTITY Ctr_privmode		"(privates Fenster)">
 
 <!ENTITY Ctr_cuibuttons		"Schaltflächen">
 <!ENTITY Ctr_cuibutnormal	"Normal">
@@ -104,13 +105,12 @@
 <!ENTITY Ctr_appbuttonc_r	"Rot">
 <!ENTITY Ctr_appbuttonc_g	"Grün">
 <!ENTITY Ctr_appbuttonc_gr	"Grau">
-<!ENTITY Ctr_appbuttonc_pu	"Violett (Privater Modus)">
+<!ENTITY Ctr_appbuttonc_pu	"Violett (Privates Fenster)">
 <!ENTITY Ctr_appbuttonc_wh	"Weiß">
-<!ENTITY Ctr_appbuttonc_cu	"Eigene">
-<!ENTITY Ctr_appbuttonct	"Eigene Farbe für Schaltfläche auf Symbolleisten">
+<!ENTITY Ctr_appbuttonc_cu	"Eigene Farbwahl">
+<!ENTITY Ctr_appbuttonct	"Eigene Farbe (falls Schaltfläche auf einer Symbolleiste)">
 <!ENTITY Ctr_appbuttonI1	"Nach einer Änderung wird ein Neustart empfohlen.">
-<!ENTITY Ctr_appbuttonI1e	"Die &brandShortName;-Schaltfläche ist auf der Windows-Titelleiste nicht sichtbar!">
-<!ENTITY Ctr_appbuttonI2	"Die Farbe ist nur auf der Titelleiste und der Tableiste sichtbar!">
+<!ENTITY Ctr_appbuttonI1e	"Die &brandShortName;-Schaltfläche ist nur auf der &brandShortName;-Titelleiste sichtbar!">
 <!ENTITY Ctr_appbutmhi		"Höhere Position (falls auf der Tableiste)">
 <!ENTITY Ctr_appbautocol	"Browserkanalfarben automatisch setzen (Standard/Aurora/Nightly)">
 <!ENTITY Ctr_appbutbdl		"Rand und Hintergrundfarbe entfernen">
