--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -21,6 +21,7 @@
 <!ENTITY Ctr_appearance		"Appearance">
 <!ENTITY Ctr_left			"Left">
 <!ENTITY Ctr_right			"Right">
+<!ENTITY Ctr_privmode		"(private window)">
 
 <!ENTITY Ctr_cuibuttons		"Buttons">
 <!ENTITY Ctr_cuibutnormal	"Normal">
@@ -107,10 +108,9 @@
 <!ENTITY Ctr_appbuttonc_pu	"Purple">
 <!ENTITY Ctr_appbuttonc_wh	"White">
 <!ENTITY Ctr_appbuttonc_cu	"Custom">
-<!ENTITY Ctr_appbuttonct	"Custom button color for button on toolbar">
+<!ENTITY Ctr_appbuttonct	"Custom button color (if button on toolbar)">
 <!ENTITY Ctr_appbuttonI1	"Restart recommended">
-<!ENTITY Ctr_appbuttonI1e	"Only visible on &brandShortName; titlebar, not Windows OS titlebar!">
-<!ENTITY Ctr_appbuttonI2	"Button colors are only visible, if button is on titlebar or tabs toolbar!">
+<!ENTITY Ctr_appbuttonI1e	"&brandShortName; button is only visible on &brandShortName; titlebar and not on OS titlebar!">
 <!ENTITY Ctr_appbutmhi		"Higher position (if on tabs toolbar)">
 <!ENTITY Ctr_appbautocol	"Automatically set browser channel color (default/Aurora/Nightly)">
 <!ENTITY Ctr_appbutbdl		"Hide borders and background colors">
