--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -21,6 +21,7 @@
 <!ENTITY Ctr_appearance		"Appearance">
 <!ENTITY Ctr_left			"Left">
 <!ENTITY Ctr_right			"Right">
+<!ENTITY Ctr_privmode		"(private window)">
 
 <!ENTITY Ctr_cuibuttons		"Botones">
 <!ENTITY Ctr_cuibutnormal	"Normales">
@@ -110,7 +111,6 @@
 <!ENTITY Ctr_appbuttonct	"Color de botón personalizado para botón en la barra de herramientas">
 <!ENTITY Ctr_appbuttonI1	"Se recomienda reiniciar">
 <!ENTITY Ctr_appbuttonI1e	"¡No es visible en la barra de título de SO de Windows, sólo en la barra de título de &brandShortName;!">
-<!ENTITY Ctr_appbuttonI2	"¡Los colores del botón sólo son visibles en la barra de título y la barra de pestañas!">
 <!ENTITY Ctr_appbutmhi		"Posición más alta (si está en la barra de pestañas)">
 <!ENTITY Ctr_appbautocol	"Establecer automáticamente el color del canal de actualización (predeterminado/Aurora/Nightly)">
 <!ENTITY Ctr_appbutbdl		"Ocultar bordes y colores de fondo">
