--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -21,6 +21,7 @@
 <!ENTITY Ctr_appearance		"Appearance">
 <!ENTITY Ctr_left			"Left">
 <!ENTITY Ctr_right			"Right">
+<!ENTITY Ctr_privmode		"(private window)">
 
 <!ENTITY Ctr_cuibuttons		"Tłóčatka">
 <!ENTITY Ctr_cuibutnormal	"Normalny">
@@ -110,7 +111,6 @@
 <!ENTITY Ctr_appbuttonct	"Swójska barba za tłóčatko na symbolowej lajsće">
 <!ENTITY Ctr_appbuttonI1	"Nowy start doporučeny">
 <!ENTITY Ctr_appbuttonI1e	"Jenož widźomny w titulnej lajsće &brandShortName;, nic na titulnej lajsće dźěłoweho systema Windows!">
-<!ENTITY Ctr_appbuttonI2	"Tłóčatkowe barby su jenož widźomne, jeli tłóčatko je na titulnej lajsće abo rajtarkowej lajsće!">
 <!ENTITY Ctr_appbutmhi		"Wyša pozicija (jeli je na rajtarkowej lajsće)">
 <!ENTITY Ctr_appbautocol	"Barbu wobhladowakoweho kanala awtomatisce nastajić (standard/Aurora/Nightly)">
 <!ENTITY Ctr_appbutbdl		"Ramiki a pozadkowe barby schować">
