--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -21,6 +21,7 @@
 <!ENTITY Ctr_appearance		"Appearance">
 <!ENTITY Ctr_left			"Left">
 <!ENTITY Ctr_right			"Right">
+<!ENTITY Ctr_privmode		"(private window)">
 
 <!ENTITY Ctr_cuibuttons		"Pulsanti">
 <!ENTITY Ctr_cuibutnormal	"Normali">
@@ -110,7 +111,6 @@
 <!ENTITY Ctr_appbuttonct	"Colore personalizzato per il pulsante nella barra degli strumenti">
 <!ENTITY Ctr_appbuttonI1	"Riavvio consigliato">
 <!ENTITY Ctr_appbuttonI1e	"Visibile solo nella barra del titolo di &brandShortName; e non in quella di Windows.">
-<!ENTITY Ctr_appbuttonI2	"Colorato solo nella barra del titolo e nella barra delle schede.">
 <!ENTITY Ctr_appbutmhi		"In cima a tutto (se nella barra delle schede)">
 <!ENTITY Ctr_appbautocol	"Imposta in automatico i colori default / Aurora / Nightly">
 <!ENTITY Ctr_appbutbdl		"Nascondi bordi e colori di sfondo">
