--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -21,6 +21,7 @@
 <!ENTITY Ctr_appearance		"Appearance">
 <!ENTITY Ctr_left			"Left">
 <!ENTITY Ctr_right			"Right">
+<!ENTITY Ctr_privmode		"(private window)">
 
 <!ENTITY Ctr_cuibuttons		"ボタン">
 <!ENTITY Ctr_cuibutnormal	"通常">
@@ -110,7 +111,6 @@
 <!ENTITY Ctr_appbuttonct	"ツールバー上のボタンの任意の色">
 <!ENTITY Ctr_appbuttonI1	"再起動を推奨">
 <!ENTITY Ctr_appbuttonI1e	"WindowsのOSタイトルバーには表示されません。&brandShortName; タイトルバー上のみです。">
-<!ENTITY Ctr_appbuttonI2	"ボタンの色はタイトルバーとタブバーのみで表示されます。">
 <!ENTITY Ctr_appbutmhi		"高い位置に表示 (タブバーに表示した時のみ)">
 <!ENTITY Ctr_appbautocol	"自動的に色を変更する (デフォルト / Aurora / Nightly)">
 <!ENTITY Ctr_appbutbdl		"枠線と背景色を隠す">
