--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -15,12 +15,13 @@
 <!ENTITY Ctr_windowcontrols	"Minimalizuj, Maksymalizuj, Zamknij (pełny ekran)">
 <!ENTITY Ctr_rr				"Wymagany restart!">
 <!ENTITY Ctr_window			"okno">
-<!ENTITY Ctr_centered		"Wyśrodkowany">
+<!ENTITY Ctr_centered		"Wyśrodkowana">
 <!ENTITY Ctr_page			"Strona">
-<!ENTITY Ctr_position		"Position">
-<!ENTITY Ctr_appearance		"Appearance">
-<!ENTITY Ctr_left			"Left">
-<!ENTITY Ctr_right			"Right">
+<!ENTITY Ctr_position		"Pozycja">
+<!ENTITY Ctr_appearance		"Wygląd">
+<!ENTITY Ctr_left			"Lewa">
+<!ENTITY Ctr_right			"Prawa">
+<!ENTITY Ctr_privmode		"(private window)">
 
 <!ENTITY Ctr_cuibuttons		"Przyciski">
 <!ENTITY Ctr_cuibutnormal	"Normalne">
@@ -63,7 +64,7 @@
 <!ENTITY Ctr_square_edges	"Kwadratowe górne rogi">
 <!ENTITY Ctr_tttitlebar		"Tytuł karty na pasku tytułu programu &brandShortName;">
 <!ENTITY Ctr_ttnooverfl		"Usuń efekt przepełnienia z długich tytułów kart">
-<!ENTITY Ctr_tabtitle		"Tab title position">
+<!ENTITY Ctr_tabtitle		"Pozycja tytułu karty">
 <!ENTITY Ctr_tabinsertion	"Wstaw powiązaną kartę za kartą bieżącą">
 <!ENTITY Ctr_emptytfavico	"Pokaż ikonę ulubionych (jeżeli strona nie zaoferuje żadnej)">
 <!ENTITY Ctr_emptytfavico_n	"Brak">
@@ -110,7 +111,6 @@
 <!ENTITY Ctr_appbuttonct	"Niestandardowy kolor przycisku dla przycisku na pasku narzędzi">
 <!ENTITY Ctr_appbuttonI1	"Zalecany restart">
 <!ENTITY Ctr_appbuttonI1e	"Tylko widoczny na pasku tytułu programu &brandShortName;, nie na systemowym pasku tytułu!">
-<!ENTITY Ctr_appbuttonI2	"Kolory przycisku są tylko widoczne, jeżeli przycisk jest na pasku tytułu albo na pasku kart!">
 <!ENTITY Ctr_appbutmhi		"Wyższa pozycja (jeżeli na pasku kart)">
 <!ENTITY Ctr_appbautocol	"Ustaw automatycznie kolor kanału przeglądarki (domyślny/Aurora/Nightly)">
 <!ENTITY Ctr_appbutbdl		"Ukryj kolory obramowań i tła">
