--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -21,6 +21,7 @@
 <!ENTITY Ctr_appearance		"Appearance">
 <!ENTITY Ctr_left			"Left">
 <!ENTITY Ctr_right			"Right">
+<!ENTITY Ctr_privmode		"(private window)">
 
 <!ENTITY Ctr_cuibuttons		"Кнопки:">
 <!ENTITY Ctr_cuibutnormal	"Обычные">
@@ -110,7 +111,6 @@
 <!ENTITY Ctr_appbuttonct	"Пользовательский цвет кнопки на панели инструментов">
 <!ENTITY Ctr_appbuttonI1	"Рекомендуется перезапуск">
 <!ENTITY Ctr_appbuttonI1e	"Кнопка &brandShortName; не отображается в строке заголовка ОС Windows!">
-<!ENTITY Ctr_appbuttonI2	"Цвета кнопок, видимые только на панели заголовка и вкладок!">
 <!ENTITY Ctr_appbutmhi		"Высокое положение (если на панели вкладок)">
 <!ENTITY Ctr_appbautocol	"Установить цвет автоматически: По умолчанию/Aurora/Nightly">
 <!ENTITY Ctr_appbutbdl		"Скрыть рамки и цвет фона">
