--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -21,6 +21,7 @@
 <!ENTITY Ctr_appearance		"Appearance">
 <!ENTITY Ctr_left			"Left">
 <!ENTITY Ctr_right			"Right">
+<!ENTITY Ctr_privmode		"(private window)">
 
 <!ENTITY Ctr_cuibuttons		"Кнопки">
 <!ENTITY Ctr_cuibutnormal	"Нормальні">
@@ -110,7 +111,6 @@
 <!ENTITY Ctr_appbuttonct	"Налаштовуваний колір кнопки на панелі">
 <!ENTITY Ctr_appbuttonI1	"рекомендовано перезапуск">
 <!ENTITY Ctr_appbuttonI1e	"Не видно в рядку заголовку Windows OS, тільки в &brandShortName; заголовку!">
-<!ENTITY Ctr_appbuttonI2	"Кольори кнопок видимі тільки на панелях заголовку і вкладок!">
 <!ENTITY Ctr_appbutmhi		"Вища позиція (якщо на панелі вкладок)">
 <!ENTITY Ctr_appbautocol	"Встановити типово / Aurora / Nightly колір автоматично">
 <!ENTITY Ctr_appbutbdl		"Сховати рамки та кольори тла">
