--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -21,6 +21,7 @@
 <!ENTITY Ctr_appearance		"Appearance">
 <!ENTITY Ctr_left			"Left">
 <!ENTITY Ctr_right			"Right">
+<!ENTITY Ctr_privmode		"(private window)">
 
 <!ENTITY Ctr_cuibuttons		"按鈕">
 <!ENTITY Ctr_cuibutnormal	"標準圖示">
@@ -110,7 +111,6 @@
 <!ENTITY Ctr_appbuttonct	"自訂按鈕顏色〈當其位於工具列時〉">
 <!ENTITY Ctr_appbuttonI1	"建議重啟瀏覽器!">
 <!ENTITY Ctr_appbuttonI1e	"在作業系統標題列上不可見">
-<!ENTITY Ctr_appbuttonI2	"此項設定僅生效於標題列與分頁列!">
 <!ENTITY Ctr_appbutmhi		"提高位置 (當顯示於分頁列時)">
 <!ENTITY Ctr_appbautocol	"依據 default / Aurora / Nightly 的版本，自動設定顏色">
 <!ENTITY Ctr_appbutbdl		"隱藏邊框和背景顏色">
