--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -21,6 +21,7 @@
 <!ENTITY Ctr_appearance		"Appearance">
 <!ENTITY Ctr_left			"Left">
 <!ENTITY Ctr_right			"Right">
+<!ENTITY Ctr_privmode		"(private window)">
 
 <!ENTITY Ctr_cuibuttons		"Nupud">
 <!ENTITY Ctr_cuibutnormal	"Tavalised">
@@ -110,7 +111,6 @@
 <!ENTITY Ctr_appbuttonct	"Kohandatud värvi nupp, kui see asub tööriistaribal">
 <!ENTITY Ctr_appbuttonI1	"Taaskäivitamine soovitatav">
 <!ENTITY Ctr_appbuttonI1e	"Nähtav ainult &brandShortName;i tiitliribal, mitte Windows OS-i tiitliribal!">
-<!ENTITY Ctr_appbuttonI2	"Nupuvärvid on nähtavad ainult siis, kui see asub tiitliribal või kaartide ribal!">
 <!ENTITY Ctr_appbutmhi		"Kõrgem asukoht (kui asub kaartide ribal)">
 <!ENTITY Ctr_appbautocol	"Määra brauseri uuendustekanali värvid (vaikimisi/Aurora/Nightly) automaatselt">
 <!ENTITY Ctr_appbutbdl		"Peida piirjooned ja taustavärvid">
