--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -21,6 +21,7 @@
 <!ENTITY Ctr_appearance		"Appearance">
 <!ENTITY Ctr_left			"Left">
 <!ENTITY Ctr_right			"Right">
+<!ENTITY Ctr_privmode		"(private window)">
 
 <!ENTITY Ctr_cuibuttons		"按钮">
 <!ENTITY Ctr_cuibutnormal	"标准">
@@ -110,7 +111,6 @@
 <!ENTITY Ctr_appbuttonct	"自定义工具柆上的按钮颜色">
 <!ENTITY Ctr_appbuttonI1	"建议重启浏览器">
 <!ENTITY Ctr_appbuttonI1e	"在 Windows 系统标题栏上不可见，仅在 &brandShortName; 标题栏上!">
-<!ENTITY Ctr_appbuttonI2	"按钮颜色只在标题栏与标签页栏上可见!">
 <!ENTITY Ctr_appbutmhi		"更高的位置 (如果在标签页栏上)">
 <!ENTITY Ctr_appbautocol	"自动设置 默认 / Aurora / Nightly 颜色">
 <!ENTITY Ctr_appbutbdl		"隐藏边框和背景色">
