Updates to the Slovenian translation

--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -21,6 +21,7 @@
 <!ENTITY Ctr_appearance		"Videz">
 <!ENTITY Ctr_left			"Levo">
 <!ENTITY Ctr_right			"Desno">
+<!ENTITY Ctr_privmode		"(zasebno okno)">
 
 <!ENTITY Ctr_cuibuttons		"Gumbi">
 <!ENTITY Ctr_cuibutnormal	"Običajno">
@@ -110,7 +111,6 @@
 <!ENTITY Ctr_appbuttonct	"Barva gumba v orodni vrstici po meri">
 <!ENTITY Ctr_appbuttonI1	"Priporočen je ponovni zagon">
 <!ENTITY Ctr_appbuttonI1e	"Ni viden v orodni vrstici OS-a Windows, samo v orodni vrstici &brandShortName;a!">
-<!ENTITY Ctr_appbuttonI2	"Barve gumba so vidne samo v nazivni vrstici in vrstici zavihkov!">
 <!ENTITY Ctr_appbutmhi		"Višji položaj (če se nahaja v orodni vrstici zavihkov)">
 <!ENTITY Ctr_appbautocol	"Samodejno nastavi privzeto / Aurora / Nightly barvo">
 <!ENTITY Ctr_appbutbdl		"Skrij obrobe in barve ozadja">
