--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -17,11 +17,11 @@
 <!ENTITY Ctr_window			"ウィンドウ">
 <!ENTITY Ctr_centered		"中央揃え">
 <!ENTITY Ctr_page			"ページ ">
-<!ENTITY Ctr_position		"Position">
-<!ENTITY Ctr_appearance		"Appearance">
-<!ENTITY Ctr_left			"Left">
-<!ENTITY Ctr_right			"Right">
-<!ENTITY Ctr_privmode		"(private window)">
+<!ENTITY Ctr_position		"配置">
+<!ENTITY Ctr_appearance		"スタイル">
+<!ENTITY Ctr_left			"左揃え">
+<!ENTITY Ctr_right			"右揃え">
+<!ENTITY Ctr_privmode		"(プライベートウィンドウ)">
 
 <!ENTITY Ctr_cuibuttons		"ボタン">
 <!ENTITY Ctr_cuibutnormal	"通常">
@@ -42,8 +42,8 @@
 <!ENTITY Ctr_tabs1m			"四角いタブ (Australis化)">
 <!ENTITY Ctr_tabs2			"丸いタブ (別バージョン)">
 <!ENTITY Ctr_tabs3			"丸いタブ (別バージョン Aero)">
-<!ENTITY Ctr_tabforminfo	"タブの見栄えは現在のテーマで制御されます。">
-<!ENTITY Ctr_coltabsinfo	"タブの見栄えは ColorfulTabs とは完全な互換性はありません！">
+<!ENTITY Ctr_tabforminfo	"タブのスタイルは現在のテーマで制御されます。">
+<!ENTITY Ctr_coltabsinfo	"タブのスタイルは ColorfulTabs とは完全な互換性はありません！">
 <!ENTITY Ctr_tabsontop0		"タブを上にする (デフォルト)">
 <!ENTITY Ctr_tabsontop1		"タブを上にする - [tabsontop=true] 属性">
 <!ENTITY Ctr_tabsontop2		"タブを下にする (v1) - [tabsontop=false] 属性">
@@ -63,8 +63,8 @@
 <!ENTITY Ctr_tabwidthinfo3	"48px未満の値は、ほとんどの場合、不具合の原因となります！">
 <!ENTITY Ctr_square_edges	"上部の角を四角くする">
 <!ENTITY Ctr_tttitlebar		"タブタイトルを &brandShortName; タイトルバーに表示する">
-<!ENTITY Ctr_ttnooverfl		"R長いタブタイトルの溢れた際の表記（...）を除去">
-<!ENTITY Ctr_tabtitle		"Tab title position">
+<!ENTITY Ctr_ttnooverfl		"長いタブタイトルが溢れた際の表記（...）を除去">
+<!ENTITY Ctr_tabtitle		"タブタイトルの配置">
 <!ENTITY Ctr_tabinsertion	"現在のタブの後ろに関連するタブを開く">
 <!ENTITY Ctr_emptytfavico	"ファビコンの表示（サイトのファビコンが存在しないとき）">
 <!ENTITY Ctr_emptytfavico_n	"なし">
