--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -21,7 +21,7 @@
 <!ENTITY Ctr_appearance		"Wygląd">
 <!ENTITY Ctr_left			"Lewa">
 <!ENTITY Ctr_right			"Prawa">
-<!ENTITY Ctr_privmode		"(private window)">
+<!ENTITY Ctr_privmode		"(okno prywatne)">
 
 <!ENTITY Ctr_cuibuttons		"Przyciski">
 <!ENTITY Ctr_cuibutnormal	"Normalne">
@@ -108,9 +108,9 @@
 <!ENTITY Ctr_appbuttonc_pu	"Fioletowy">
 <!ENTITY Ctr_appbuttonc_wh	"Biały">
 <!ENTITY Ctr_appbuttonc_cu	"Niestandardowy">
-<!ENTITY Ctr_appbuttonct	"Niestandardowy kolor przycisku dla przycisku na pasku narzędzi">
+<!ENTITY Ctr_appbuttonct	"Niestandardowy kolor przycisku (jeżeli przycisk na pasku narzędzi)">
 <!ENTITY Ctr_appbuttonI1	"Zalecany restart">
-<!ENTITY Ctr_appbuttonI1e	"Tylko widoczny na pasku tytułu programu &brandShortName;, nie na systemowym pasku tytułu!">
+<!ENTITY Ctr_appbuttonI1e	"Przycisk programu &brandShortName; jest tylko widoczny na pasku tytułu programu &brandShortName;, a nie na systemowym pasku tytułu!">
 <!ENTITY Ctr_appbutmhi		"Wyższa pozycja (jeżeli na pasku kart)">
 <!ENTITY Ctr_appbautocol	"Ustaw automatycznie kolor kanału przeglądarki (domyślny/Aurora/Nightly)">
 <!ENTITY Ctr_appbutbdl		"Ukryj kolory obramowań i tła">
