--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -423,6 +423,8 @@
 <!ENTITY Ctr_menu_restart.label			"Genstart">
 <!ENTITY Ctr_restartapp					"Vis 'Genstart' i &brandShortName;-menu og Filer-menu">
 <!ENTITY Ctr_ctrnewinv					"Understreg nye indstillinger for nuværende &brandShortName; version">
+<!ENTITY Ctr_cssoverride				"Custom css code">
+<!ENTITY Ctr_cssoverride2				"Css code will not be checked for errors!">
 
 <!ENTITY Ctr_openInCurrentTab			"Åbn inputs i nuværende faneblad">
 <!ENTITY Ctr_openInNewTab				"Åbn inputs i et nyt faneblad">
