--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -423,6 +423,8 @@
 <!ENTITY Ctr_menu_restart.label			"Neustarten">
 <!ENTITY Ctr_restartapp					"'Neustarten'-Eintrag im '&brandShortName;'- und 'Datei-Menü'">
 <!ENTITY Ctr_ctrnewinv					"Einstellungen für diese &brandShortName; Version 'unterstreichen'">
+<!ENTITY Ctr_cssoverride				"Eigener CSS-Code">
+<!ENTITY Ctr_cssoverride2				"CSS-Code wird nicht auf Fehler überprüft!">
 
 <!ENTITY Ctr_openInCurrentTab			"Eingabe im aktiven Tab öffnen">
 <!ENTITY Ctr_openInNewTab				"Eingabe in neuem Tab öffnen">
