--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -423,6 +423,8 @@
 <!ENTITY Ctr_menu_restart.label			"Znowego startowaś">
 <!ENTITY Ctr_restartapp					"Znowego startowaś w meniju '&brandShortName;' a w meniju Dataja pokazaś">
 <!ENTITY Ctr_ctrnewinv					"Nowe nastajenja za aktualnu wersiju &brandShortName; pódšmarnuś">
+<!ENTITY Ctr_cssoverride				"Custom css code">
+<!ENTITY Ctr_cssoverride2				"Css code will not be checked for errors!">
 
 <!ENTITY Ctr_openInCurrentTab			"Zapódaśa w aktualnem rejtarku wócyniś">
 <!ENTITY Ctr_openInNewTab				"Zapódaśa w nowem rejtarku wócyniś">
