--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -423,6 +423,8 @@
 <!ENTITY Ctr_menu_restart.label			"Reiniciar">
 <!ENTITY Ctr_restartapp					"'Reiniciar' en el menú de &brandShortName; y el menú 'Archivo'">
 <!ENTITY Ctr_ctrnewinv					"Subrayar opciones nuevas para la actual versión de &brandShortName;">
+<!ENTITY Ctr_cssoverride				"Custom css code">
+<!ENTITY Ctr_cssoverride2				"Css code will not be checked for errors!">
 
 <!ENTITY Ctr_openInCurrentTab			"Abrir entradas en la pestaña actual">
 <!ENTITY Ctr_openInNewTab				"Abrir entradas en una nueva pestaña">
