--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -423,6 +423,8 @@
 <!ENTITY Ctr_menu_restart.label			"Riavvia">
 <!ENTITY Ctr_restartapp					"'Riavvia' nel menu del Pulsante &brandShortName; e nel menu File">
 <!ENTITY Ctr_ctrnewinv					"Sottolinea le nuove opzioni della versione corrente di &brandShortName;">
+<!ENTITY Ctr_cssoverride				"Custom css code">
+<!ENTITY Ctr_cssoverride2				"Css code will not be checked for errors!">
 
 <!ENTITY Ctr_openInCurrentTab			"Apri l'indirizzo nella scheda corrente">
 <!ENTITY Ctr_openInNewTab				"Apri l'indirizzo in una nuova scheda">
