--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -423,6 +423,8 @@
 <!ENTITY Ctr_menu_restart.label			"リスタート">
 <!ENTITY Ctr_restartapp					"&brandShortName; メニューとファイルメニューにリスタートを追加する">
 <!ENTITY Ctr_ctrnewinv					"現在のバージョンの &brandShortName; 用の新しいオプションに下線を引く">
+<!ENTITY Ctr_cssoverride				"Custom css code">
+<!ENTITY Ctr_cssoverride2				"Css code will not be checked for errors!">
 
 <!ENTITY Ctr_openInCurrentTab			"入力後に現在のタブで開く">
 <!ENTITY Ctr_openInNewTab				"入力後に新しいタブで開く">
