--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -423,6 +423,8 @@
 <!ENTITY Ctr_menu_restart.label			"Reiniciar">
 <!ENTITY Ctr_restartapp					"Exibir 'Reiniciar' no menu &brandShortName; e menu Arquivo">
 <!ENTITY Ctr_ctrnewinv					"Sublinhar novas opções da atual versão do &brandShortName;">
+<!ENTITY Ctr_cssoverride				"Custom css code">
+<!ENTITY Ctr_cssoverride2				"Css code will not be checked for errors!">
 
 <!ENTITY Ctr_openInCurrentTab			"Abrir entradas na aba atual">
 <!ENTITY Ctr_openInNewTab				"Abrir entradas em uma nova aba">
