--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -17,11 +17,11 @@
 <!ENTITY Ctr_window			"окно">
 <!ENTITY Ctr_centered		"По центру">
 <!ENTITY Ctr_page			"Страница">
-<!ENTITY Ctr_position		"Position">
-<!ENTITY Ctr_appearance		"Appearance">
-<!ENTITY Ctr_left			"Left">
-<!ENTITY Ctr_right			"Right">
-<!ENTITY Ctr_privmode		"(private window)">
+<!ENTITY Ctr_position		"Положение">
+<!ENTITY Ctr_appearance		"Внешний вид">
+<!ENTITY Ctr_left			"Слева">
+<!ENTITY Ctr_right			"Справа">
+<!ENTITY Ctr_privmode		"(приватное окно)">
 
 <!ENTITY Ctr_cuibuttons		"Кнопки:">
 <!ENTITY Ctr_cuibutnormal	"Обычные">
@@ -64,7 +64,7 @@
 <!ENTITY Ctr_square_edges	"Верхние углы квадратные">
 <!ENTITY Ctr_tttitlebar		"Название вкладки в заголовке &brandShortName;">
 <!ENTITY Ctr_ttnooverfl		"Удалить эффект переполнения с длинных заголовков вкладок">
-<!ENTITY Ctr_tabtitle		"Tab title position">
+<!ENTITY Ctr_tabtitle		"Положение заголовка вкладки">
 <!ENTITY Ctr_tabinsertion	"Открывать связанную вкладку после текущей вкладки">
 <!ENTITY Ctr_emptytfavico	"Показывать фавиконку (если отсутствует)">
 <!ENTITY Ctr_emptytfavico_n	"Нет">
@@ -423,6 +423,8 @@
 <!ENTITY Ctr_menu_restart.label			"Перезапуск">
 <!ENTITY Ctr_restartapp					"«Перезапуск» в меню приложения/файл">
 <!ENTITY Ctr_ctrnewinv					"Подчёркивать новые опции для текущей версии &brandShortName;">
+<!ENTITY Ctr_cssoverride				"Custom css code">
+<!ENTITY Ctr_cssoverride2				"Css code will not be checked for errors!">
 
 <!ENTITY Ctr_openInCurrentTab			"Открывать данные в текущей вкладке">
 <!ENTITY Ctr_openInNewTab				"Открывать данные в новой вкладке">
