--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -423,6 +423,8 @@
 <!ENTITY Ctr_menu_restart.label			"Рестарт">
 <!ENTITY Ctr_restartapp					"«Рестарт» в кнопці програми та в меню «Файл»">
 <!ENTITY Ctr_ctrnewinv					"Підкреслені нові опції для поточної версії &brandShortName;">
+<!ENTITY Ctr_cssoverride				"Custom css code">
+<!ENTITY Ctr_cssoverride2				"Css code will not be checked for errors!">
 
 <!ENTITY Ctr_openInCurrentTab			"Відкрити вхідні дані в поточній вкладці">
 <!ENTITY Ctr_openInNewTab				"Відкрити вхідні дані в новій вкладці">
