--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -423,6 +423,8 @@
 <!ENTITY Ctr_menu_restart.label			"重啟">
 <!ENTITY Ctr_restartapp					"&brandShortName;-選單和「檔案」選單裡顯示「重啟」按鈕">
 <!ENTITY Ctr_ctrnewinv					"為目前 &brandShortName; 版本的新設定項畫上底線">
+<!ENTITY Ctr_cssoverride				"Custom css code">
+<!ENTITY Ctr_cssoverride2				"Css code will not be checked for errors!">
 
 <!ENTITY Ctr_openInCurrentTab			"在目前分頁開啟輸入結果">
 <!ENTITY Ctr_openInNewTab				"在新分頁開啟輸入結果">
